# stl_viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  package-release.ps1  setup.ps1  setup.sh  vcpkg.json
include/: exporter.h  renderer.h  stl_loader.h
src/: exporter.cpp  main.cpp  renderer.cpp  stl_loader.cpp
stb/: stb_image_write.h
